--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "model-registry-ui",
-  "version": "0.0.1",
+  "version": "0.1.3",
   "description": "An user interface for Kubeflow Model Registry project",
   "repository": "https://github.com/kubeflow/model-registry.git",
   "homepage": "https://github.com/kubeflow/model-registry",
@@ -17,17 +17,18 @@
     "build:prod": "webpack --config ./config/webpack.prod.js",
     "build:clean": "rm -rf ./dist",
     "start:dev": "webpack serve --hot --color --config ./config/webpack.dev.js",
-    "test": "run-s test:lint test:unit test:cypress-ci",
+    "test": "run-s test:lint test:type-check test:unit test:cypress-ci",
     "test:cypress-ci": "npx concurrently -P -k -s first \"npm run cypress:server:build && npm run cypress:server\" \"npx wait-on tcp:127.0.0.1:9001 && npm run cypress:run:mock -- {@}\" -- ",
     "test:jest": "jest",
     "test:unit": "npm run test:jest -- --silent",
     "test:fix": "eslint --ext .js,.ts,.jsx,.tsx ./src --fix",
     "test:lint": "eslint --max-warnings 0 --ext .js,.ts,.jsx,.tsx ./src",
+    "test:type-check": "tsc --noEmit",
     "cypress:open": "cypress open --project src/__tests__/cypress",
     "cypress:open:mock": "CY_MOCK=1 npm run cypress:open -- ",
     "cypress:run": "cypress run -b chrome --project src/__tests__/cypress",
     "cypress:run:mock": "CY_MOCK=1 npm run cypress:run -- ",
-    "cypress:server:build": "DIST_DIR=./public-cypress POLL_INTERVAL=9999999 DEPLOYMENT_MODE=standalone MOCK_AUTH=true npm run build",
+    "cypress:server:build": "DIST_DIR=./public-cypress POLL_INTERVAL=9999999 DEPLOYMENT_MODE=standalone npm run build",
     "cypress:server": "serve ./public-cypress -p 9001 -s -L"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@cypress/code-coverage": "^3.14.1",
+    "@cypress/webpack-preprocessor": "^6.0.4",
     "@module-federation/enhanced": "^0.13.1",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.1.7",
@@ -66,7 +68,7 @@
     "dotenv-expand": "^5.1.0",
     "dotenv-webpack": "^6.0.0",
     "expect": "^29.7.0",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.3",
     "imagemin": "^9.0.0",
@@ -81,7 +83,7 @@
     "react-refresh": "^0.14.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.87.0",
-    "sass-loader": "^13.2.0",
+    "sass-loader": "^13.3.3",
     "serve": "^14.2.4",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^4.0.0",
@@ -112,6 +114,7 @@
     "classnames": "^2.2.6",
     "dompurify": "^3.2.4",
     "lodash-es": "^4.17.15",
+    "mod-arch-shared": "^0.1.4",
     "npm-run-all": "^4.1.5",
     "react": "^18",
     "react-dom": "^18",
@@ -135,10 +138,5 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0"
-  },
-  "overrides": {
-    "serve": {
-      "path-to-regexp": "3.3.0"
-    }
   }
 }
